# OpenCV_begin

EX1/: CMakeLists.txt  main.cpp
EX10/: CMakeLists.txt  advanced.cpp  main.cpp
EX2/: CMakeLists.txt  main.cpp
EX3/: CMakeLists.txt  main.cpp
EX4/: CMakeLists.txt  main.cpp
EX5/: CMakeLists.txt  main.cpp
EX6/: CMakeLists.txt  main.cpp  readme.txt
EX7/: CMakeLists.txt  Canny.cpp  Combine.cpp  Laplace.cpp  Sobel.cpp
EX8/: CMakeLists.txt  comprehensive.cpp  myResize.cpp
EX9/: CMakeLists.txt  circle.cpp  color_range.cpp  houghcircle_param.cpp  identify_ball.cpp  line.cpp  mytest.cpp  perspective.cpp
